@@ -1,6 +1,5 @@
 #include <assert.h>
 #include "libsapling/cc/parser/first.h"
-#include "libsapling/cc/parser/aux/symbol_set.h"
 #include "test/parser/parser_test_utils.h"
 
 int main(void)
@@ -11,7 +10,7 @@ int main(void)
         node_t *first_set = compute_first_set(g, i);
         assert(symbol_set__compare(first_set, &first_sets[i]));
         /*symbol_path__print_data(stderr, first_set);
-        fprintf(stderr, "\n");
+        fprintf(stderr, " ?= ");
         symbol_path__print_data(stderr, &first_sets[i]);
         fprintf(stderr, "\n");*/
     }
