@@ -10,6 +10,7 @@ IMPLEMENT_TYPED_QUEUE(production_queue, production_t, production__print)
 grammar_t build_test_grammar(void)
 {
     node_t *productions = malloc(sizeof(node_t));
+    *productions = NULL;
     node_t *pbodies = malloc(7 * sizeof(node_t));
     for (int i = 0; i < 7; i++)
         pbodies[i] = NULL;
@@ -67,6 +68,29 @@ grammar_t build_test_grammar(void)
 
 node_t *build_test_first_sets(void)
 {
+    /*
+     * first( id ) = { id }
+     * first( +  ) = { + }
+     * first( *  ) = { * }
+     * first( (  ) = { ( }
+     * first( )  ) = { ) }
+     * first( $  ) = { $ }
+     * first( E' ) = { (, id }
+     * first( E  ) = { (, id }
+     * first( T  ) = { (, id }
+     * first( F  ) = { (, id }
+     * 
+     * first(0) = { 0 }
+     * first(1) = { 1 }
+     * first(2) = { 2 }
+     * first(3) = { 3 }
+     * first(4) = { 4 }
+     * first(5) = { 5 }
+     * first(6) = { 3, 0 }
+     * first(7) = { 3, 0 }
+     * first(8) = { 3, 0 }
+     * first(9) = { 3, 0 }
+     */
     node_t *first_sets = malloc(10 * sizeof(node_t));
     for (int i = 0; i < 10; i++)
         first_sets[i] = NULL;
@@ -78,6 +102,37 @@ node_t *build_test_first_sets(void)
         symbol_queue__insert(&first_sets[i], 0);
     }
     return first_sets;
+}
+
+node_t *build_test_follow_sets(void)
+{
+    /*
+     * follow( E' ) = { $ }
+     * follow( E  ) = { $, +, ) }
+     * follow( T  ) = { $, +, ), * }
+     * follow( F  ) = { $, +, ), * }
+     * 
+     * follow(6) = { 5 }
+     * follow(7) = { 5, 1, 4 }
+     * follow(8) = { 5, 1, 4, 2 }
+     * follow(9) = { 5, 1, 4, 2 }
+     */
+    node_t *follow_sets = malloc(4 * sizeof(node_t));
+    for (int i = 0; i < 4; i++)
+        follow_sets[i] = NULL;
+    symbol_queue__insert(&follow_sets[0], 5);
+    symbol_queue__insert(&follow_sets[1], 5);
+    symbol_queue__insert(&follow_sets[1], 1);
+    symbol_queue__insert(&follow_sets[1], 4);
+    symbol_queue__insert(&follow_sets[2], 5);
+    symbol_queue__insert(&follow_sets[2], 1);
+    symbol_queue__insert(&follow_sets[2], 4);
+    symbol_queue__insert(&follow_sets[2], 2);
+    symbol_queue__insert(&follow_sets[3], 5);
+    symbol_queue__insert(&follow_sets[3], 1);
+    symbol_queue__insert(&follow_sets[3], 4);
+    symbol_queue__insert(&follow_sets[3], 2);
+    return follow_sets;
 }
 
 
