@@ -5,6 +5,7 @@
 
 grammar_t build_test_grammar(void);
 node_t *build_test_first_sets(void);
+node_t *build_test_follow_sets(void);
 int symbol_set__compare(node_t *a, node_t *b);
 
 #endif
